--- a/Menu.html
+++ b/Menu.html
@@ -7,9 +7,11 @@
  <link rel="stylesheet" href="Menu.css">
  <script src="script.js"></script>
     <title>Quiz Kids in Action</title>
+
+    <link rel="logo icon" href="Imagens/Logo para loja infantil colorida.png" >
 </head>
 <header class="cabecalho">
-    <a href="home.html"><img class="cabecalho-imagem" src="Logo para loja infantil colorida.png" alt="logo"></a>
+    <a href="home.html"><img class="cabecalho-imagem" src="Imagens/Logo para loja infantil colorida.png" alt="logo"></a>
  
 
     <nav class="cabecalho-menu">
@@ -34,7 +36,8 @@
 
     <div class="conteudo-padrao">
 
-        <img class="conteudo-padrao-imagem" src="Adesivo Colorido Feliz Dia das Crianças.png" alt="logo"></a>
+        <img class="conteudo-padrao-imagem" src="Imagens/Adesivo Colorido Feliz Dia das Crianças.png" alt="logo"></a>
+        </div
  
       
     
